--- a/notebooks/1-overview.ipynb
+++ b/notebooks/1-overview.ipynb
@@ -20,19 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4ef73dc6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import mikeio\n",
     "from pathlib import Path\n",
@@ -51,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "e656a190",
    "metadata": {},
    "outputs": [],
@@ -69,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "f40cc13c",
    "metadata": {},
    "outputs": [],
@@ -91,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "44b80cd9",
    "metadata": {},
    "outputs": [
@@ -126,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "61035993",
    "metadata": {},
    "outputs": [
@@ -156,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "63a4e2cc",
    "metadata": {},
    "outputs": [
@@ -185,7 +176,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sns_autocalibration",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
