--- a/notebooks/2-calibration.ipynb
+++ b/notebooks/2-calibration.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4ef73dc6",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\FSCH\\OneDrive - DHI\\Workspace\\Code\\Python\\projects\\sns_autocalibration\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\FSCH\\Downloads\\test\\sns_autocalibration\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -38,7 +38,6 @@
     "import modelskill as ms\n",
     "import mikeio\n",
     "from pathlib import Path\n",
-    "import subprocess\n",
     "import numpy as np\n",
     "from helpers import run_simulation, read_num_timesteps, Collector, find_zones, suggest_new_manning, create_new_manning_file, create_new_simfile\n",
     "\n",
@@ -89,9 +88,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\FSCH\\AppData\\Local\\Temp\\ipykernel_38868\\1831883161.py:6: ExperimentalWarning: GPSampler is experimental (supported from v3.6.0). The interface can change in the future.\n",
+      "C:\\Users\\FSCH\\AppData\\Local\\Temp\\ipykernel_45564\\1831883161.py:6: ExperimentalWarning: GPSampler is experimental (supported from v3.6.0). The interface can change in the future.\n",
       "  sampler=optuna.samplers.GPSampler(seed=0),\n",
-      "[I 2025-07-02 11:51:45,396] A new study created in RDB with name: SNS-Autocalibration_example\n"
+      "[I 2025-07-02 13:25:06,509] A new study created in RDB with name: SNS-Autocalibration_example\n"
      ]
     }
    ],
@@ -236,6 +235,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Processing:   0%|          | 0/500 [00:48<?, ?step/s]\n",
+      "c:\\Users\\FSCH\\Downloads\\test\\sns_autocalibration\\.venv\\Lib\\site-packages\\modelskill\\comparison\\_utils.py:68: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  res = df.groupby(by=by, observed=False, sort=False).apply(calc_metrics)\n",
+      "[I 2025-07-02 13:25:55,879] Trial 0 finished with value: 0.23672998888737848 and parameters: {'Manning zone 0': 44.510999999999996, 'Manning zone 1': 58.001, 'Manning zone 2': 48.891, 'Manning zone 3': 44.190999999999995, 'Manning zone 4': 34.361, 'Manning zone 5': 52.381, 'Manning zone 6': 35.491}. Best is trial 0 with value: 0.23672998888737848.\n",
+      "Processing:   0%|          | 0/500 [00:27<?, ?step/s]\n",
+      "c:\\Users\\FSCH\\Downloads\\test\\sns_autocalibration\\.venv\\Lib\\site-packages\\modelskill\\comparison\\_utils.py:68: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  res = df.groupby(by=by, observed=False, sort=False).apply(calc_metrics)\n",
+      "[I 2025-07-02 13:26:24,216] Trial 1 finished with value: 0.21386560543494368 and parameters: {'Manning zone 0': 72.331, 'Manning zone 1': 78.161, 'Manning zone 2': 31.101000000000003, 'Manning zone 3': 64.21100000000001, 'Manning zone 4': 42.891, 'Manning zone 5': 46.071, 'Manning zone 6': 75.07100000000001}. Best is trial 1 with value: 0.21386560543494368.\n",
+      "Processing:   0%|          | 0/500 [00:27<?, ?step/s]\n",
+      "c:\\Users\\FSCH\\Downloads\\test\\sns_autocalibration\\.venv\\Lib\\site-packages\\modelskill\\comparison\\_utils.py:68: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  res = df.groupby(by=by, observed=False, sort=False).apply(calc_metrics)\n",
+      "[I 2025-07-02 13:26:52,793] Trial 2 finished with value: 0.4522603088974106 and parameters: {'Manning zone 0': 5.761, 'Manning zone 1': 7.061000000000001, 'Manning zone 2': 1.631, 'Manning zone 3': 67.531, 'Manning zone 4': 63.111, 'Manning zone 5': 70.561, 'Manning zone 6': 79.37100000000001}. Best is trial 1 with value: 0.21386560543494368.\n",
+      "Processing:   0%|          | 0/500 [00:26<?, ?step/s]\n",
+      "c:\\Users\\FSCH\\Downloads\\test\\sns_autocalibration\\.venv\\Lib\\site-packages\\modelskill\\comparison\\_utils.py:68: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  res = df.groupby(by=by, observed=False, sort=False).apply(calc_metrics)\n",
+      "[I 2025-07-02 13:27:20,083] Trial 3 finished with value: 0.39796530531901947 and parameters: {'Manning zone 0': 64.811, 'Manning zone 1': 37.431, 'Manning zone 2': 63.301, 'Manning zone 3': 9.591, 'Manning zone 4': 51.900999999999996, 'Manning zone 5': 11.621, 'Manning zone 6': 76.62100000000001}. Best is trial 1 with value: 0.21386560543494368.\n",
+      "Processing:   0%|          | 0/500 [00:24<?, ?step/s]\n",
+      "c:\\Users\\FSCH\\Downloads\\test\\sns_autocalibration\\.venv\\Lib\\site-packages\\modelskill\\comparison\\_utils.py:68: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  res = df.groupby(by=by, observed=False, sort=False).apply(calc_metrics)\n",
+      "[I 2025-07-02 13:27:45,878] Trial 4 finished with value: 0.5912566820717471 and parameters: {'Manning zone 0': 42.321, 'Manning zone 1': 33.631, 'Manning zone 2': 21.451, 'Manning zone 3': 62.791, 'Manning zone 4': 36.991, 'Manning zone 5': 46.101, 'Manning zone 6': 1.521}. Best is trial 1 with value: 0.21386560543494368.\n",
+      "Processing:   0%|          | 0/500 [00:24<?, ?step/s]\n",
+      "c:\\Users\\FSCH\\Downloads\\test\\sns_autocalibration\\.venv\\Lib\\site-packages\\modelskill\\comparison\\_utils.py:68: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  res = df.groupby(by=by, observed=False, sort=False).apply(calc_metrics)\n",
+      "[I 2025-07-02 13:28:11,731] Trial 5 finished with value: 0.2578269855247084 and parameters: {'Manning zone 0': 50.091, 'Manning zone 1': 49.641, 'Manning zone 2': 50.031, 'Manning zone 3': 76.54100000000001, 'Manning zone 4': 55.301, 'Manning zone 5': 29.151000000000003, 'Manning zone 6': 35.440999999999995}. Best is trial 1 with value: 0.21386560543494368.\n",
       "Processing:   0%|          | 0/500 [00:00<?, ?step/s]"
      ]
     }
@@ -247,7 +270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sns_autocalibration",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
