--- a/notebooks/3-analysis.ipynb
+++ b/notebooks/3-analysis.ipynb
@@ -20,16 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4ef73dc6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "c:\\Users\\FSCH\\Downloads\\test\\sns_autocalibration\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "29e035b2",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "0924305f",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "cad098b9",
    "metadata": {},
    "outputs": [
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "cb7bf3ec",
    "metadata": {},
    "outputs": [
@@ -4862,7 +4862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "8891ab45",
    "metadata": {},
    "outputs": [
@@ -4876,43 +4876,43 @@
         {
          "cliponaxis": false,
          "hovertemplate": [
-          "Manning zone 1 (FloatDistribution): 0.005507723948771927<extra></extra>",
-          "Manning zone 0 (FloatDistribution): 0.007589330924165002<extra></extra>",
-          "Manning zone 5 (FloatDistribution): 0.10119725976590117<extra></extra>",
-          "Manning zone 4 (FloatDistribution): 0.15943052178988834<extra></extra>",
-          "Manning zone 6 (FloatDistribution): 0.18912621711408492<extra></extra>",
-          "Manning zone 3 (FloatDistribution): 0.20162591385758047<extra></extra>",
-          "Manning zone 2 (FloatDistribution): 0.3355230325996082<extra></extra>"
+          "Manning zone 0 (FloatDistribution): 0.007438096949823152<extra></extra>",
+          "Manning zone 1 (FloatDistribution): 0.012928686316146956<extra></extra>",
+          "Manning zone 5 (FloatDistribution): 0.07977500903770751<extra></extra>",
+          "Manning zone 4 (FloatDistribution): 0.14308023757614247<extra></extra>",
+          "Manning zone 3 (FloatDistribution): 0.2088644651072313<extra></extra>",
+          "Manning zone 6 (FloatDistribution): 0.21894467981871044<extra></extra>",
+          "Manning zone 2 (FloatDistribution): 0.3289688251942379<extra></extra>"
          ],
          "name": "Objective Value",
          "orientation": "h",
          "text": [
           "<0.01",
-          "<0.01",
-          "0.10",
-          "0.16",
-          "0.19",
-          "0.20",
-          "0.34"
+          "0.01",
+          "0.08",
+          "0.14",
+          "0.21",
+          "0.22",
+          "0.33"
          ],
          "textposition": "outside",
          "type": "bar",
          "x": [
-          0.005507723948771927,
-          0.007589330924165002,
-          0.10119725976590117,
-          0.15943052178988834,
-          0.18912621711408492,
-          0.20162591385758047,
-          0.3355230325996082
+          0.007438096949823152,
+          0.012928686316146956,
+          0.07977500903770751,
+          0.14308023757614247,
+          0.2088644651072313,
+          0.21894467981871044,
+          0.3289688251942379
          ],
          "y": [
-          "Manning zone 1",
           "Manning zone 0",
+          "Manning zone 1",
           "Manning zone 5",
           "Manning zone 4",
-          "Manning zone 6",
           "Manning zone 3",
+          "Manning zone 6",
           "Manning zone 2"
          ]
         }
@@ -5728,7 +5728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "a07f7cd9",
    "metadata": {},
    "outputs": [
@@ -5883,7 +5883,7 @@
        "75                 53.021                 77.321  COMPLETE  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5904,7 +5904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "9535d53a",
    "metadata": {},
    "outputs": [],
@@ -5917,7 +5917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "e6413cce",
    "metadata": {},
    "outputs": [
@@ -5927,7 +5927,7 @@
        "<Axes: title={'center': 'MIKE21 vs Helgoland'}, xlabel='Observation, Surface Elevation [meter]', ylabel='Model, Surface Elevation [meter]'>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5966,7 +5966,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sns_autocalibration",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
