--- a/notebooks/2-calibration.ipynb
+++ b/notebooks/2-calibration.ipynb
@@ -20,20 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4ef73dc6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\FSCH\\Downloads\\test\\sns_autocalibration\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "from tqdm import TqdmWarning\n",
+    "warnings.simplefilter(\"ignore\", category=TqdmWarning)\n",
+    "\n",
     "import optuna\n",
     "import modelskill as ms\n",
     "import mikeio\n",
@@ -88,9 +84,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\FSCH\\AppData\\Local\\Temp\\ipykernel_45564\\1831883161.py:6: ExperimentalWarning: GPSampler is experimental (supported from v3.6.0). The interface can change in the future.\n",
+      "C:\\Users\\FSCH\\AppData\\Local\\Temp\\ipykernel_34452\\1831883161.py:6: ExperimentalWarning: GPSampler is experimental (supported from v3.6.0). The interface can change in the future.\n",
       "  sampler=optuna.samplers.GPSampler(seed=0),\n",
-      "[I 2025-07-02 13:25:06,509] A new study created in RDB with name: SNS-Autocalibration_example\n"
+      "[I 2025-07-02 14:02:58,694] A new study created in RDB with name: SNS-Autocalibration_example\n"
      ]
     }
    ],
@@ -222,12 +218,13 @@
    "id": "9a001e58",
    "metadata": {},
    "source": [
-    "##### Optimize "
+    "##### Optimize \n",
+    "This will take about 30 - 60 seconds for each trial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "396fa978",
    "metadata": {},
    "outputs": [
@@ -235,31 +232,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing:   0%|          | 0/500 [00:48<?, ?step/s]\n",
-      "c:\\Users\\FSCH\\Downloads\\test\\sns_autocalibration\\.venv\\Lib\\site-packages\\modelskill\\comparison\\_utils.py:68: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  res = df.groupby(by=by, observed=False, sort=False).apply(calc_metrics)\n",
-      "[I 2025-07-02 13:25:55,879] Trial 0 finished with value: 0.23672998888737848 and parameters: {'Manning zone 0': 44.510999999999996, 'Manning zone 1': 58.001, 'Manning zone 2': 48.891, 'Manning zone 3': 44.190999999999995, 'Manning zone 4': 34.361, 'Manning zone 5': 52.381, 'Manning zone 6': 35.491}. Best is trial 0 with value: 0.23672998888737848.\n",
+      "Processing:   0%|          | 0/500 [00:45<?, ?step/s]\n",
+      "[I 2025-07-02 14:03:45,317] Trial 0 finished with value: 0.23672998888737848 and parameters: {'Manning zone 0': 44.510999999999996, 'Manning zone 1': 58.001, 'Manning zone 2': 48.891, 'Manning zone 3': 44.190999999999995, 'Manning zone 4': 34.361, 'Manning zone 5': 52.381, 'Manning zone 6': 35.491}. Best is trial 0 with value: 0.23672998888737848.\n",
       "Processing:   0%|          | 0/500 [00:27<?, ?step/s]\n",
-      "c:\\Users\\FSCH\\Downloads\\test\\sns_autocalibration\\.venv\\Lib\\site-packages\\modelskill\\comparison\\_utils.py:68: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  res = df.groupby(by=by, observed=False, sort=False).apply(calc_metrics)\n",
-      "[I 2025-07-02 13:26:24,216] Trial 1 finished with value: 0.21386560543494368 and parameters: {'Manning zone 0': 72.331, 'Manning zone 1': 78.161, 'Manning zone 2': 31.101000000000003, 'Manning zone 3': 64.21100000000001, 'Manning zone 4': 42.891, 'Manning zone 5': 46.071, 'Manning zone 6': 75.07100000000001}. Best is trial 1 with value: 0.21386560543494368.\n",
-      "Processing:   0%|          | 0/500 [00:27<?, ?step/s]\n",
-      "c:\\Users\\FSCH\\Downloads\\test\\sns_autocalibration\\.venv\\Lib\\site-packages\\modelskill\\comparison\\_utils.py:68: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  res = df.groupby(by=by, observed=False, sort=False).apply(calc_metrics)\n",
-      "[I 2025-07-02 13:26:52,793] Trial 2 finished with value: 0.4522603088974106 and parameters: {'Manning zone 0': 5.761, 'Manning zone 1': 7.061000000000001, 'Manning zone 2': 1.631, 'Manning zone 3': 67.531, 'Manning zone 4': 63.111, 'Manning zone 5': 70.561, 'Manning zone 6': 79.37100000000001}. Best is trial 1 with value: 0.21386560543494368.\n",
+      "[I 2025-07-02 14:04:14,432] Trial 1 finished with value: 0.21386560543494368 and parameters: {'Manning zone 0': 72.331, 'Manning zone 1': 78.161, 'Manning zone 2': 31.101000000000003, 'Manning zone 3': 64.21100000000001, 'Manning zone 4': 42.891, 'Manning zone 5': 46.071, 'Manning zone 6': 75.07100000000001}. Best is trial 1 with value: 0.21386560543494368.\n",
       "Processing:   0%|          | 0/500 [00:26<?, ?step/s]\n",
-      "c:\\Users\\FSCH\\Downloads\\test\\sns_autocalibration\\.venv\\Lib\\site-packages\\modelskill\\comparison\\_utils.py:68: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  res = df.groupby(by=by, observed=False, sort=False).apply(calc_metrics)\n",
-      "[I 2025-07-02 13:27:20,083] Trial 3 finished with value: 0.39796530531901947 and parameters: {'Manning zone 0': 64.811, 'Manning zone 1': 37.431, 'Manning zone 2': 63.301, 'Manning zone 3': 9.591, 'Manning zone 4': 51.900999999999996, 'Manning zone 5': 11.621, 'Manning zone 6': 76.62100000000001}. Best is trial 1 with value: 0.21386560543494368.\n",
+      "[I 2025-07-02 14:04:41,909] Trial 2 finished with value: 0.4522603088974106 and parameters: {'Manning zone 0': 5.761, 'Manning zone 1': 7.061000000000001, 'Manning zone 2': 1.631, 'Manning zone 3': 67.531, 'Manning zone 4': 63.111, 'Manning zone 5': 70.561, 'Manning zone 6': 79.37100000000001}. Best is trial 1 with value: 0.21386560543494368.\n",
+      "Processing:   0%|          | 0/500 [00:26<?, ?step/s]\n",
+      "[I 2025-07-02 14:05:10,024] Trial 3 finished with value: 0.39796530531901947 and parameters: {'Manning zone 0': 64.811, 'Manning zone 1': 37.431, 'Manning zone 2': 63.301, 'Manning zone 3': 9.591, 'Manning zone 4': 51.900999999999996, 'Manning zone 5': 11.621, 'Manning zone 6': 76.62100000000001}. Best is trial 1 with value: 0.21386560543494368.\n",
+      "Processing:   0%|          | 0/500 [00:25<?, ?step/s]\n",
+      "[I 2025-07-02 14:05:36,818] Trial 4 finished with value: 0.5912566820717471 and parameters: {'Manning zone 0': 42.321, 'Manning zone 1': 33.631, 'Manning zone 2': 21.451, 'Manning zone 3': 62.791, 'Manning zone 4': 36.991, 'Manning zone 5': 46.101, 'Manning zone 6': 1.521}. Best is trial 1 with value: 0.21386560543494368.\n",
       "Processing:   0%|          | 0/500 [00:24<?, ?step/s]\n",
-      "c:\\Users\\FSCH\\Downloads\\test\\sns_autocalibration\\.venv\\Lib\\site-packages\\modelskill\\comparison\\_utils.py:68: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  res = df.groupby(by=by, observed=False, sort=False).apply(calc_metrics)\n",
-      "[I 2025-07-02 13:27:45,878] Trial 4 finished with value: 0.5912566820717471 and parameters: {'Manning zone 0': 42.321, 'Manning zone 1': 33.631, 'Manning zone 2': 21.451, 'Manning zone 3': 62.791, 'Manning zone 4': 36.991, 'Manning zone 5': 46.101, 'Manning zone 6': 1.521}. Best is trial 1 with value: 0.21386560543494368.\n",
+      "[I 2025-07-02 14:06:02,306] Trial 5 finished with value: 0.2578269855247084 and parameters: {'Manning zone 0': 50.091, 'Manning zone 1': 49.641, 'Manning zone 2': 50.031, 'Manning zone 3': 76.54100000000001, 'Manning zone 4': 55.301, 'Manning zone 5': 29.151000000000003, 'Manning zone 6': 35.440999999999995}. Best is trial 1 with value: 0.21386560543494368.\n",
+      "Processing:   0%|          | 0/500 [00:23<?, ?step/s]\n",
+      "[I 2025-07-02 14:06:27,088] Trial 6 finished with value: 0.4478950838628051 and parameters: {'Manning zone 0': 56.580999999999996, 'Manning zone 1': 4.881, 'Manning zone 2': 54.080999999999996, 'Manning zone 3': 54.391, 'Manning zone 4': 17.061, 'Manning zone 5': 10.451, 'Manning zone 6': 25.581000000000003}. Best is trial 1 with value: 0.21386560543494368.\n",
       "Processing:   0%|          | 0/500 [00:24<?, ?step/s]\n",
-      "c:\\Users\\FSCH\\Downloads\\test\\sns_autocalibration\\.venv\\Lib\\site-packages\\modelskill\\comparison\\_utils.py:68: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  res = df.groupby(by=by, observed=False, sort=False).apply(calc_metrics)\n",
-      "[I 2025-07-02 13:28:11,731] Trial 5 finished with value: 0.2578269855247084 and parameters: {'Manning zone 0': 50.091, 'Manning zone 1': 49.641, 'Manning zone 2': 50.031, 'Manning zone 3': 76.54100000000001, 'Manning zone 4': 55.301, 'Manning zone 5': 29.151000000000003, 'Manning zone 6': 35.440999999999995}. Best is trial 1 with value: 0.21386560543494368.\n",
-      "Processing:   0%|          | 0/500 [00:00<?, ?step/s]"
+      "[I 2025-07-02 14:06:53,208] Trial 7 finished with value: 0.4691444538115139 and parameters: {'Manning zone 0': 29.501, 'Manning zone 1': 46.241, 'Manning zone 2': 35.571, 'Manning zone 3': 80.161, 'Manning zone 4': 8.270999999999999, 'Manning zone 5': 16.941000000000003, 'Manning zone 6': 13.081}. Best is trial 1 with value: 0.21386560543494368.\n",
+      "Processing:   0%|          | 0/500 [00:25<?, ?step/s]\n",
+      "[I 2025-07-02 14:07:19,833] Trial 8 finished with value: 0.44752461462170584 and parameters: {'Manning zone 0': 52.971, 'Manning zone 1': 20.541, 'Manning zone 2': 37.821, 'Manning zone 3': 19.821, 'Manning zone 4': 12.891, 'Manning zone 5': 8.951, 'Manning zone 6': 53.231}. Best is trial 1 with value: 0.21386560543494368.\n",
+      "Processing:   0%|          | 0/500 [00:25<?, ?step/s]\n",
+      "[I 2025-07-02 14:07:46,448] Trial 9 finished with value: 0.5314539722555053 and parameters: {'Manning zone 0': 11.201, 'Manning zone 1': 15.940999999999999, 'Manning zone 2': 29.901000000000003, 'Manning zone 3': 66.59100000000001, 'Manning zone 4': 7.871, 'Manning zone 5': 67.96100000000001, 'Manning zone 6': 7.791}. Best is trial 1 with value: 0.21386560543494368.\n"
      ]
     }
    ],
@@ -270,7 +262,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "sns_autocalibration",
    "language": "python",
    "name": "python3"
   },
