--- a/notebooks/3-analysis.ipynb
+++ b/notebooks/3-analysis.ipynb
@@ -20,20 +20,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4ef73dc6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\FSCH\\Downloads\\test\\sns_autocalibration\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import warnings\n",
+    "from tqdm import TqdmWarning\n",
+    "warnings.simplefilter(\"ignore\", category=TqdmWarning)\n",
+    "\n",
     "import optuna\n",
     "import pandas as pd\n",
     "import modelskill as ms\n",
@@ -51,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "29e035b2",
    "metadata": {},
    "outputs": [],
@@ -62,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "0924305f",
    "metadata": {},
    "outputs": [],
@@ -92,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "cad098b9",
    "metadata": {},
    "outputs": [
@@ -1352,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "cb7bf3ec",
    "metadata": {},
    "outputs": [
@@ -4862,7 +4857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "8891ab45",
    "metadata": {},
    "outputs": [
@@ -4876,43 +4871,43 @@
         {
          "cliponaxis": false,
          "hovertemplate": [
-          "Manning zone 0 (FloatDistribution): 0.007438096949823152<extra></extra>",
-          "Manning zone 1 (FloatDistribution): 0.012928686316146956<extra></extra>",
-          "Manning zone 5 (FloatDistribution): 0.07977500903770751<extra></extra>",
-          "Manning zone 4 (FloatDistribution): 0.14308023757614247<extra></extra>",
-          "Manning zone 3 (FloatDistribution): 0.2088644651072313<extra></extra>",
-          "Manning zone 6 (FloatDistribution): 0.21894467981871044<extra></extra>",
-          "Manning zone 2 (FloatDistribution): 0.3289688251942379<extra></extra>"
+          "Manning zone 0 (FloatDistribution): 0.0030046097187739654<extra></extra>",
+          "Manning zone 1 (FloatDistribution): 0.0052375041937073865<extra></extra>",
+          "Manning zone 5 (FloatDistribution): 0.07351847921839173<extra></extra>",
+          "Manning zone 4 (FloatDistribution): 0.1699571927631158<extra></extra>",
+          "Manning zone 6 (FloatDistribution): 0.18355445772850923<extra></extra>",
+          "Manning zone 3 (FloatDistribution): 0.20128064497250692<extra></extra>",
+          "Manning zone 2 (FloatDistribution): 0.36344711140499497<extra></extra>"
          ],
          "name": "Objective Value",
          "orientation": "h",
          "text": [
           "<0.01",
-          "0.01",
-          "0.08",
-          "0.14",
-          "0.21",
-          "0.22",
-          "0.33"
+          "<0.01",
+          "0.07",
+          "0.17",
+          "0.18",
+          "0.20",
+          "0.36"
          ],
          "textposition": "outside",
          "type": "bar",
          "x": [
-          0.007438096949823152,
-          0.012928686316146956,
-          0.07977500903770751,
-          0.14308023757614247,
-          0.2088644651072313,
-          0.21894467981871044,
-          0.3289688251942379
+          0.0030046097187739654,
+          0.0052375041937073865,
+          0.07351847921839173,
+          0.1699571927631158,
+          0.18355445772850923,
+          0.20128064497250692,
+          0.36344711140499497
          ],
          "y": [
           "Manning zone 0",
           "Manning zone 1",
           "Manning zone 5",
           "Manning zone 4",
-          "Manning zone 3",
           "Manning zone 6",
+          "Manning zone 3",
           "Manning zone 2"
          ]
         }
@@ -5728,7 +5723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "a07f7cd9",
    "metadata": {},
    "outputs": [
@@ -5883,7 +5878,7 @@
        "75                 53.021                 77.321  COMPLETE  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5904,7 +5899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "9535d53a",
    "metadata": {},
    "outputs": [],
@@ -5917,7 +5912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "e6413cce",
    "metadata": {},
    "outputs": [
@@ -5927,7 +5922,7 @@
        "<Axes: title={'center': 'MIKE21 vs Helgoland'}, xlabel='Observation, Surface Elevation [meter]', ylabel='Model, Surface Elevation [meter]'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5966,7 +5961,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "sns_autocalibration",
    "language": "python",
    "name": "python3"
   },
