--- a/notebooks/1-overview.ipynb
+++ b/notebooks/1-overview.ipynb
@@ -176,7 +176,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "sns_autocalibration",
    "language": "python",
    "name": "python3"
   },
